<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Books</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit a Book</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="book_overview">Book overview</string>
    <string name="book_thema">Thema</string>
    <string name="book_quantity">Quantity</string>
    <string name="book_price">Price</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="take_out_of_stock">Take out 1 pcs of stock</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>

    <string name="hint_book_title">Book title</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone_number">Supplier phone number</string>
    <string name="hint_book_price">Price</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="unit_book_currency">€</string>
    <string name="thema_unknown">Unknown</string>
    <string name="thema_fantasy">Fantasy</string>
    <string name="thema_science_fiction">Science-fiction</string>

    <string name="editor_insert_book_failed">Error with adding book</string>
    <string name="editor_insert_book_successful">Book added</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>


    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="button_enable_edit_item">Enable edit item</string>
    <string name="button_call_to_supplier">Call to Supplier</string>
    <string name="button_quantity_minus">Quantity -</string>
    <string name="button_quantity_plus">Quantity +</string>

</resources>
