<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:text="@string/book_overview"
                style="@style/CategoryStyle" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:orientation="vertical">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_book_title"
                    android:hint="@string/hint_book_title"
                    android:inputType="textCapWords"
                    style="@style/EditorFieldStyle" />

                <!-- Breed field -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textCapWords"
                    style="@style/EditorFieldStyle" />
                <EditText
                    android:id="@+id/edit_supplier_phone_number"
                    android:hint="@string/hint_supplier_phone_number"
                    android:inputType="phone"
                    style="@style/EditorFieldStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_thema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/book_thema"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_book"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_thema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/book_quantity"
            style="@style/CategoryStyle" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_book_quantity"
                android:hint="@string/hint_book_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/book_price"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/hint_book_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <TextView
                android:id="@+id/label_currency"
                android:text="@string/unit_book_currency"
                style="@style/EditorUnitsStyle"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_quantity_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_quantity_plus"
            android:layout_weight="1"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/button_quantity_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_quantity_minus"
            android:layout_weight="1"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_enable_edit_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_enable_edit_item"
            android:layout_weight="1"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/button_supplier_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_call_to_supplier"
            android:layout_weight="1"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>
